--- a/www/appetizers.html
+++ b/www/appetizers.html
@@ -31,7 +31,7 @@
     </head>
 
     <body>
-
+        <!-- commit and push test -->
         <!-- This is the first page -->
         <section   id="appetizers01" data-role="page">
             <div data-role="header" data-position="fixed" data-theme="c">
